fix alignment of mid section on large display

--- a/styles.css
+++ b/styles.css
@@ -287,6 +287,7 @@ ul{
   }
 
   #systemList{
+    margin-right: 7%;
     list-style: none;
     line-height: 1.5em;
   }
